--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Sistema v33.5 (PDF Pro)</title>
+  <title>Sistema v33.7 (Proteção Material)</title>
   
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -102,7 +102,7 @@
         <input type="text" id="loginUser" class="login-input" placeholder="Usuário">
         <input type="password" id="loginPass" class="login-input" placeholder="Senha">
         <button class="login-btn" onclick="fazerLogin()">ENTRAR</button>
-        <p style="font-size:12px; color:#888; margin-top:15px">Sistema v33.5</p>
+        <p style="font-size:12px; color:#888; margin-top:15px">Sistema v33.7</p>
     </div>
 </div>
 
@@ -637,7 +637,7 @@
     const clean = (t) => t ? t.normalize("NFD").replace(/[\u0300-\u036f]/g, "").toUpperCase() : "";
     
     // ============================================
-    // CABEÇALHO DA EMPRESA (SB) - AGORA COM DADOS
+    // CABEÇALHO DA EMPRESA (SB) - AGORA COM CNPJ CORRETO
     // ============================================
     doc.setFontSize(14);
     doc.setFont("helvetica", "bold");
@@ -646,7 +646,7 @@
     doc.setFontSize(9);
     doc.setFont("helvetica", "normal");
     doc.text("RUA SAO CARLOS, 84 - VILA MARIANA - RIBEIRAO PRETO / SP", 105, 20, {align: "center"});
-    // Deixei aqui um placeholder para o CNPJ da SB, você pode editar se quiser
+    // CNPJ ATUALIZADO AQUI
     doc.text("CNPJ: 61.149.312/0001-56", 105, 24, {align: "center"}); 
 
     // LINHA SEPARADORA
@@ -664,7 +664,7 @@
         });
     } else {
         // ============================================
-        // DADOS DO CLIENTE - CORRIGIDO
+        // DADOS DO CLIENTE - CORRIGIDO (COM MATERIAL NA DESCRIÇÃO)
         // ============================================
         doc.setFontSize(10);
         doc.text(`ORCAMENTO - OS: ${d.os} | DATA: ${new Date().toLocaleDateString('pt-BR')}`, 20, 35);
@@ -686,7 +686,8 @@
             startY: tableY, 
             head: [['DESCRICAO', 'QTD', 'V. UNIT', 'V. TOTAL']], 
             body: d.itens.map(i => [
-                clean(i.n), 
+                // FORÇA O MATERIAL APARECER AQUI
+                clean(i.n) + " - MAT: " + clean(i.mat), 
                 i.q, 
                 window.fmtMoney(i.v), 
                 window.fmtMoney(i.v * i.q)
