--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Sistema v33.7 (Proteção Material)</title>
+  <title>Sistema v33.6 (Final c/ CNPJ)</title>
   
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -102,7 +102,7 @@
         <input type="text" id="loginUser" class="login-input" placeholder="Usuário">
         <input type="password" id="loginPass" class="login-input" placeholder="Senha">
         <button class="login-btn" onclick="fazerLogin()">ENTRAR</button>
-        <p style="font-size:12px; color:#888; margin-top:15px">Sistema v33.7</p>
+        <p style="font-size:12px; color:#888; margin-top:15px">Sistema v33.6</p>
     </div>
 </div>
 
@@ -664,7 +664,7 @@
         });
     } else {
         // ============================================
-        // DADOS DO CLIENTE - CORRIGIDO (COM MATERIAL NA DESCRIÇÃO)
+        // DADOS DO CLIENTE - CORRIGIDO
         // ============================================
         doc.setFontSize(10);
         doc.text(`ORCAMENTO - OS: ${d.os} | DATA: ${new Date().toLocaleDateString('pt-BR')}`, 20, 35);
@@ -686,8 +686,7 @@
             startY: tableY, 
             head: [['DESCRICAO', 'QTD', 'V. UNIT', 'V. TOTAL']], 
             body: d.itens.map(i => [
-                // FORÇA O MATERIAL APARECER AQUI
-                clean(i.n) + " - MAT: " + clean(i.mat), 
+                clean(i.n), 
                 i.q, 
                 window.fmtMoney(i.v), 
                 window.fmtMoney(i.v * i.q)
