--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Sistema v34.1 (Ajuste Revestimento)</title>
+  <title>Sistema v34.2 (Com Edição de Custo)</title>
   
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -102,7 +102,7 @@
         <input type="text" id="loginUser" class="login-input" placeholder="Usuário">
         <input type="password" id="loginPass" class="login-input" placeholder="Senha">
         <button class="login-btn" onclick="fazerLogin()">ENTRAR</button>
-        <p style="font-size:12px; color:#888; margin-top:15px">Sistema v34.1</p>
+        <p style="font-size:12px; color:#888; margin-top:15px">Sistema v34.2</p>
     </div>
 </div>
 
@@ -728,9 +728,25 @@
           <div style="display:flex; gap:5px; margin-bottom:5px;">
             <input value="${m.n}" readonly style="flex:2; background:#eee">
             <input value="${window.fmtMoney(m.p)}" readonly style="flex:1; background:#eee">
+            
+            <button onclick="editarPrecoMaterial(${i})" style="background:var(--warning); color:black; border:none; padding:5px; border-radius:4px; font-weight:bold; font-size:10px; margin-right:2px;">EDIT</button>
+
             <button onclick="window.marbeDB.custos.mats.splice(${i},1); window.salvarNuvem(); updateUI();" style="background:red; color:white; border:none; padding:5px; border-radius:4px; font-weight:bold">X</button>
           </div>`).join('');
     }
+  }
+
+  function editarPrecoMaterial(i) {
+      const m = window.marbeDB.custos.mats[i];
+      const novo = prompt(`Novo preço para ${m.n} (Atual: ${m.p}):`, m.p);
+      if(novo) {
+          const pFloat = parseFloat(novo.replace(',','.'));
+          if(!isNaN(pFloat)) {
+              window.marbeDB.custos.mats[i].p = pFloat;
+              window.salvarNuvem();
+              updateUI();
+          }
+      }
   }
 
   function addMaterial() {
